// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterLabel renders with secondary scheme when no "scheme" prop is provided 1`] = `
.c1:not(:focus):not(:active):not(:focus-within) {
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  display: inline-block;
  padding: 2px 5px;
  font-size: 12px;
  font-weight: bold;
  line-height: 1;
  border-radius: 20px;
  border: var(--borderWidth-thin,max(1px,0.0625rem)) solid var(--counter-borderColor,var(--color-counter-border));
}

.c0:empty {
  display: none;
}

<div>
  <span
    aria-hidden="true"
    class="c0"
    data-scheme="secondary"
  >
    1234
  </span>
  <span
    class="c1"
  >
     (
    1234
    )
  </span>
</div>
`;

exports[`CounterLabel respects the primary "scheme" prop 1`] = `
.c1:not(:focus):not(:active):not(:focus-within) {
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  display: inline-block;
  padding: 2px 5px;
  font-size: 12px;
  font-weight: bold;
  line-height: 1;
  border-radius: 20px;
  border: var(--borderWidth-thin,max(1px,0.0625rem)) solid var(--counter-borderColor,var(--color-counter-border));
}

.c0:empty {
  display: none;
}

<div>
  <span
    aria-hidden="true"
    class="c0"
    data-scheme="primary"
  >
    1234
  </span>
  <span
    class="c1"
  >
     (
    1234
    )
  </span>
</div>
`;
